2009-09-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugins.c:
   Remove plugin from plugin manager dialog on unloading if it no
   longer exists or is incompatible.


2009-08-27  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/geany.h:
   Define G_GNUC_WARN_UNUSED_RESULT if GLib < 2.10.
 * doc/plugins.dox:
   Mention Files link at top for header files; demoplugin.c.
   Minor edits; remove 'far from being complete'.
 * src/keyfile.c, src/keyfile.h, src/main.c,
   data/filetype_extensions.conf, HACKING:
   Remove --generate-data-files argument & code - just edit
   filetype_extensions.conf by hand (filetype order was broken
   anyway).
   Add *.H extension for C++ (useful for non-Windows systems).


2009-08-26  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/plugins.dox:
   Add warning about not using undocumented features.
   Add reference to HACKING for plugin API development.
 * HACKING:
   Add section 'Plugin API/ABI design'.


2009-08-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * tagmanager/php.c:
   Improve parsing of PHP functions by requiring a valid modifier or
   whitespace before the 'function' keyword to ignore some false
   positives like function tags inside comments
   (patch by Harold Aling, thanks).
 * tagmanager/python.c:
   Don't parse comments after import statements and other tags
   (closes #2838938, patch by Huandari Lopez, thanks).


2009-08-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * plugins/splitwindow.c:
   Set the cursor color for the split window.


2009-08-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/callbacks.c:
   Fix 'Open Selected File' for unsaved new documents.
 * src/keybindings.c, src/keybindings.h, src/prefs.c:
   Fix updating main menu accelerators after changing keybindings
   (thanks to Lex Trotman).
 * src/callbacks.c:
   Fix using 'Insert date' keybinding when a custom date string has