@@ -1,3 +1,10 @@
+2009-09-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/keybindings.c:
+   Fix 'Reflow block' command when at the last paragraph and there's
+   no last newline (patch by Eugene Arshinov, thanks).
+
+
 2009-09-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/plugins.c:
